--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  font-family: "Montserrat";
+}
+*::selection {
+  background-color: transparent;
+}
+:root {
+  --black:#141414;
+  --orange:#F08200;
 }
