--- a/src/pages/Section4/Section4.scss
+++ b/src/pages/Section4/Section4.scss
@@ -1,20 +1,41 @@
 .section4{
   height: 827px;
   background-color: blue;
-
   .container{
     height: 100%;
     margin: 0 auto;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    justify-content: space-around;
     max-width: 1440px;
     .left{
       max-width: 500px;
       border: 5px solid;
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 30px;
+      h1{
+        font-weight: 500;
+        font-size: 36px;
+        line-height: 56px;
+        color: #FFFFFF;
+      }
+      h2{
+        font-weight: 500;
+        font-size: 32px;
+        line-height: 47px;
+        color: #FFFFFF;
+      }
+    }
+    .right{
+      max-width: 500px;
+      display: flex;
+      flex-direction: column;
+      gap: 35px;
+      .first{
+
+      }
     }
   }
 }
