--- a/src/pages/Header/header.scss
+++ b/src/pages/Header/header.scss
@@ -1,5 +1,8 @@
 .header {
   height: 93px;
+  position: sticky;
+  top: 0;
+  background-color: #fff;
   .container {
     max-width: 1440px;
     height: 100%;
@@ -137,17 +140,17 @@
           position: absolute;
           z-index: 1;
 
-          a {
+          p {
             width: 100%;
             text-align: center;
-            display: block;
             color: #333333;
-            padding: 10px 15px;
+            padding: 10px 0;
+            font-size: 14px;
             text-decoration: none;
-            font-size: 16px;
-
+            background-color: #f2f2f2;
             &:hover {
-              background-color: #f2f2f2;
+              background-color: gray;
+              color: #fff;
             }
           }
         }
