--- a/src/pages/Section1/Section1.scss
+++ b/src/pages/Section1/Section1.scss
@@ -9,9 +9,14 @@
     margin: 0 auto;
     height: 100%;
     display: flex;
+
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 40px;
+    padding-right: 20px;
     .top{
       display: flex;
       flex-wrap: wrap;
