--- a/src/pages/Section8/Section8.scss
+++ b/src/pages/Section8/Section8.scss
@@ -1,10 +1,8 @@
 .section8{
-  min-height: 800px;
   background-image: url("../../images/backAnim.gif");
   background-size: contain;
   .container{
     margin: 0 auto;
-    height: 100%;
     display: flex;
     flex-direction: column;
     max-width: 1440px;
@@ -12,12 +10,16 @@
     padding-bottom: 20px;
     padding-right: 20px;
     padding-left: 20px;
-    gap: 150px;
+    gap: 60px;
+    justify-content: center;
     h1{
       font-weight: 500;
       font-size: 36px;
       line-height: 130%;
       color: #FFFFFF;
+    }
+    img{
+      object-fit: contain;
     }
   }
 }
