--- a/src/pages/Section6/Section6.scss
+++ b/src/pages/Section6/Section6.scss
@@ -48,11 +48,13 @@
         display: flex;
         flex-wrap: wrap;
         gap: 100px;
+        justify-content: center;
       }
       .innerBottom{
         display: flex;
         flex-wrap: wrap;
         gap: 100px;
+        justify-content: center;
       }
     }
   }
