--- a/src/pages/Section10/Section10.scss
+++ b/src/pages/Section10/Section10.scss
@@ -1,22 +1,19 @@
 .section10 {
   min-height: 1200px;
   .container {
-.section10{
-  min-height: 900px;
-  .container{
     height: 100%;
-    max-width: 1440px;
+    max-width: calc(1440px - (296px + 177px));
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     padding-top: 160px;
     .main {
-    .main{
       display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
       gap: 30px;
       height: 100%;
-      margin: 0 auto;
       width: 100%;
     }
     h1 {
@@ -51,9 +48,11 @@
         }
       }
     }
-      img{
-        height: 100%;
-        width: 100%;
+    img {
+      height: 100%;
+      width: 100%;
+      margin: 0 auto;
+      display: block;
     }
   }
 }
