--- a/src/pages/Section12/Section12.scss
+++ b/src/pages/Section12/Section12.scss
@@ -11,6 +11,13 @@
       display: flex;
       flex-direction: column;
     }
+    .forImg {
+      img {
+        width: 500px;
+        height: 500px;
+        object-fit: contain;
+      }
+    }
     .left{
       max-width: 100%;
       min-height: 100%;
