--- a/src/pages/Section12/Section12.scss
+++ b/src/pages/Section12/Section12.scss
@@ -6,6 +6,7 @@
     margin: 0 auto;
     height: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     @media (max-width: 700px) {
       display: flex;
@@ -114,6 +115,12 @@
         width: 50%;
       @media (max-width: 700px) {
         width: 100%;
+      }
+      .forImg {
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
       @media (max-width:700px) {
         .forImg{
