--- a/src/pages/Footer/Footer.scss
+++ b/src/pages/Footer/Footer.scss
@@ -1,131 +1,192 @@
-.footer {
-  background-color: #031e36;
-  height: 259px;
-  .container {
-    max-width: 1440px;
-    height: 100%;
+.footer{
+  min-height: 260px;
+  background: #031E36;
+  .container{
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 20px;
-    align-items: center;
-    .dropdown {
-      display: inline;
-      position: relative;
-      @media (max-width:864px) {
-        display: none;
+    margin: 0 auto;
+    height: 100%;
+    padding: 20px 20px;
+    max-width: 1440px;
+    justify-content: space-evenly;
+    @media (max-width: 700px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+    }
+    .left{
+      max-width: 65%;
+      height:100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      @media (max-width: 700px) {
+        max-width: 100%;
+        display: flex;
+        gap: 20px;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
       }
-
-      .dropdown-button {
+      .top{
         display: flex;
         align-items: center;
-        color: var(--black);
-        background: transparent;
-        color: #fff;
-        border: none;
-        font-weight: 500;
-        font-size: 20px;
-        cursor: pointer;
-      }
-
-      .dropdown-content {
-        width: 100%;
-        display: none;
-        position: absolute;
-        background-color: #fff;
-        z-index: 999999999;
-        top: 1.6vw;
-        right: -20px;
-
-        p {
-          width: 100%;
+        gap: 30px;
+        @media (max-width: 700px) {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
           text-align: center;
-          color: #333333;
-          cursor: pointer;
-          padding: 10px 0;
-          font-size: 14px;
-          text-decoration: none;
-          transition: 0.3s all;
-          border-bottom: 1px solid #000;
-
-          box-shadow: -6px -9px 48px -1px rgba(34, 60, 80, 0.2);
-
-          &:last-child {
-            border: none;
-          }
-          &:hover {
-            opacity: 40%;
+          justify-content: center;
+        }
+      }
+      .bottom{
+        max-width: 68%;
+        @media (max-width: 700px) {
+          text-align: center;
+        }
+        p{
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 27px;
+          letter-spacing: 0.27px;
+          color: #FFFFFF;
+          @media (max-width: 700px) {
+            text-align: center;
           }
         }
       }
-
-      &:hover .dropdown-content {
-        display: block;
-      }
     }
-    .content {
-      width: 90%;
+    .right{
+      display: flex;
+      justify-content: center;
+      text-align: end;
       height: 100%;
-      display: flex;
       flex-direction: column;
-      align-items: start;
-      padding-left: 10vw;
-    }
-    .top {
-      height: 30%;
-      width: 100%;
-      display: flex;
-      gap: 40px;
-      @media (max-width: 1050px) {
+      @media (max-width: 700px) {
+        max-width: 100%;
+        display: flex;
+        gap: 20px;
         flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
       }
-      img {
-        width: 240px;
-        height: 50px;
-        cursor: pointer;
-        object-fit: contain;
-        color: #fff;
+      h1{
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 26px;
+        letter-spacing: 0.27px;
+        color: #FFFFFF;
       }
-    }
-    ul {
-      list-style-type: none;
-      margin: 0;
-      display: flex;
-      height: 40%;
-      padding-top: 20px;
-      gap: 15px;
-      li {
-        color: #fff;
-      }
-      @media (max-width: 1050px) {
-        display: none;
-      }
-    }
-    .right {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      p {
-        font-size: 15px;
+      p{
         font-weight: 500;
-        color: #fff;
-        line-height: 40px;
-        &:first-child {
-          font-weight: 600;
-          font-size: 26px;
-        }
+        font-size: 15px;
+        line-height: 26px;
+        text-align: right;
+        letter-spacing: 0.27px;
+        color: #FFFFFF;
+      }
+      small{
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 26px;
+        letter-spacing: 0.27px;
+        color: #FFFFFF;
+
       }
     }
   }
-  .bottom {
-    width: 40%;
-    text-align: start;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.dropdown {
+  display: inline;
+  position: relative;
+  @media (max-width:864px) {
+    display: none;
+  }
+
+  .dropdown-button {
+    display: flex;
+    align-items: center;
+    color: var(--black);
+    background: transparent;
     color: #fff;
-    font-size: 16px;
+    border: none;
     font-weight: 500;
-    line-height: 30px;
-    @media (max-width: 1050px) {
+    font-size: 20px;
+    cursor: pointer;
+  }
+
+  .dropdown-content {
+    width: 100%;
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    z-index: 999999999;
+    top: 1.6vw;
+    right: -20px;
+
+    p {
       width: 100%;
+      text-align: center;
+      color: #333333;
+      cursor: pointer;
+      padding: 10px 0;
+      font-size: 14px;
+      text-decoration: none;
+      transition: 0.3s all;
+      border-bottom: 1px solid #000;
+
+      box-shadow: -6px -9px 48px -1px rgba(34, 60, 80, 0.2);
+
+      &:last-child {
+        border: none;
+      }
+      &:hover {
+        opacity: 40%;
+      }
     }
   }
+
+  &:hover .dropdown-content {
+    display: block;
+  }
+}
+.dropdown-button {
+  display: flex;
+  align-items: center;
+  color: var(--black);
+  background: transparent;
+  color: #fff;
+  border: none;
+  font-weight: 500;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  width: 100%;
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  z-index: 999999999;
+  top: 1.6vw;
+  right: -20px;
 }
