--- a/src/pages/Section10/Section10.scss
+++ b/src/pages/Section10/Section10.scss
@@ -6,6 +6,7 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    padding: 30px 30px;
     padding-top: 160px;
     .main {
       display: flex;
