--- a/src/pages/Section7/Section7.scss
+++ b/src/pages/Section7/Section7.scss
@@ -4,14 +4,9 @@
     max-width: 1440px;
     height: 100%;
     margin: 0 auto;
-    padding-top: 40px;
     display: flex;
+    padding: 30px 30px;
     flex-direction: column;
-    padding-right: 20px;
-    padding-left: 20px;
-
-    padding-bottom: 40px;
-    margin-top: 30px;
     gap: 30px;
     h1{
       font-weight: 500;
@@ -57,6 +52,11 @@
         align-items: center;
         justify-content: center;
         width: 400px;
+        @media (max-width: 1000px) {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+        }
         img{
           max-width: 321px;
           height: 240px;
