--- a/src/pages/Section9/Section9.scss
+++ b/src/pages/Section9/Section9.scss
@@ -6,10 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top:50px;
-    padding-left:20px;
-    padding-right:20px;
-    padding-bottom:30px;
+    padding: 20px 20px;
     max-width: 1440px;
     .bigCard{
       width: 1110px;
