--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,51 @@
     top: 70vw;
   }
 }
+@media (max-width: 500px) {
+  .btn-2 {
+    margin: 0  10px 0px 0px !important;
+    height: 30px !important;
+    width: 30px !important;
+  }
+  .btn-1 {
+    margin: 0 0 0 10px !important;
+    height: 30px !important;
+    width: 30px !important;
+  }
+  .btn-2 i {
+    font-size: 20px !important;
+  }
+  .swiper_item .title {
+    width: 100%;
+    font-size: 20px !important;
+  }
+  .swiper_item {
+    padding: 56px 70px 0 !important;
+  }
+  .swiper_item .price {
+    margin-top: 40px !important;
+    font-size: 20px !important;
+  }
+  .swiper_container  {
+    min-height: 300px;
+  }
+  .swiper_item .links {
+    gap: 14px  !important;
+    left: 20px !important;
+    width: 100% !important;
+    flex-wrap: wrap !important;
+  }
+  .swiper_item .links li {
+    font-size: 10px;
+  }
+  .swiper_item .links li::before {
+    width: 10px !important;
+    height: 10px !important;
+    left: -12px !important;
+    top: 1px !important;
+  }
+  
+}
 .flying_items img {
   width: 80px;
   object-fit: contain;
@@ -115,7 +160,7 @@
 .btn-2 {
   width: 70px;
   height: 70px;
-  margin-right: 165px;
+  margin-right: 20vw;
 }
 .btn-2 i {
   font-size: 40px;
@@ -158,7 +203,7 @@
   font-weight: 600;
   color: #fff;
   margin-top: 75px;
-  font-size: 64px;
+  font-size: 2em;
 }
 .swiper_item .links {
   display: flex;
