--- a/src/pages/Section3/Section3.scss
+++ b/src/pages/Section3/Section3.scss
@@ -18,11 +18,20 @@
       gap: 80px;
       justify-content: center;
       .card{
-        height: 275px;
-        width: 310px;
+        min-height: 275px;
+        width: 340px;
         display: flex;
         flex-direction: column;
         gap: 20px;
+        .between {
+          ul {
+            margin-top: 30px;
+            margin-left: 40px;
+            display: flex;
+            flex-direction: column;
+            gap: 3px;
+          }
+        }
         h1{
           font-weight: 500;
           font-size: 24px;
